# the-primer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: skill-runner-contract.md  workflow-cli-headless.md
examples/adaptive_tutoring_prototype/: routine.yaml  routine_graph.py
examples/workflow-cli/: tutor-concept.input.json
src/capillary_actions_sdk/: tutor.py
src/capillary_actions_sdk/models/: __init__.py  knowledge.py
src/capillary_actions_sdk/ports/: __init__.py  knowledge.py
src/primer_core/: __init__.py  orchestrator.py  workflow_cli.py
src/primer_core/orchestrator/: __init__.py  engagement.py  hooks.py  triggers.py  writeback.py
src/primer_core/testing/: __init__.py  fakes.py
src/primer_core/tests/: test_memory_core.py
src/primer_core/wdfs/: tutor-concept.yaml
src/primer_sdk/: __init__.py
src/primer_sdk/models/: __init__.py
tests/: test_adaptive_tutoring_prototype.py  test_events.py  test_fakes.py  test_interaction.py  test_memory_core.py  test_models_learner_interaction.py  test_models_learning_actions.py  test_models_presentation.py  test_models_student.py  test_ports_knowledge.py  test_ports_learner_interaction.py  test_ports_learning_actions.py  test_ports_presentation.py  test_ports_student.py  test_reference_slack.py  test_skills.py  test_workflow_cli.py
tests/integration/: test_education_on_capillary_adapters.py  test_education_slice.py  test_week4_feedback_loop.py
tests/orchestrator/: test_hooks.py  test_orchestrator_hooks.py  test_run_engagement_streaming.py  test_triggers.py  test_writeback.py
(+16 files in other folders)
