[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "primer-sdk"
version = "0.1.0"
description = "SDK for building extensions to the Primer platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<4.0"
authors = [
    { name = "Primer SDK Contributors" },
]
keywords = ["sdk", "ai", "agents", "workflows", "ag-ui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/primer-sdk/primer-sdk"
Repository = "https://github.com/primer-sdk/primer-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/primer_sdk"]

[tool.hatch.build.targets.sdist]
include = ["src/primer_sdk"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]
